--- a/appAPI/TelerikWebApp1/TelerikWebApp1.csproj
+++ b/appAPI/TelerikWebApp1/TelerikWebApp1.csproj
@@ -39,6 +39,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DotNet.Highcharts, Version=4.0.0.0, Culture=neutral, PublicKeyToken=88854f873df851bf, processorArchitecture=MSIL">
+      <HintPath>..\packages\DotNet.Highcharts.4.0\lib\DotNet.Highcharts.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -153,6 +156,39 @@
     <Content Include="images\Thumbnails\Penguins.jpg" />
     <Content Include="images\Thumbnails\Tulips.jpg" />
     <Content Include="Page2.aspx" />
+    <Content Include="scripts\Highcharts-4.0.1\js\adapters\standalone-framework.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\adapters\standalone-framework.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\highcharts-3d.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\highcharts-3d.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\highcharts-all.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\highcharts-more.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\highcharts-more.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\highcharts.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\highcharts.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\canvas-tools.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\canvas-tools.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\data.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\data.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\drilldown.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\drilldown.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\exporting.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\exporting.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\funnel.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\funnel.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\heatmap.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\heatmap.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\no-data-to-display.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\no-data-to-display.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\solid-gauge.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\modules\solid-gauge.src.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\themes\dark-blue.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\themes\dark-green.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\themes\dark-unica.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\themes\gray.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\themes\grid-light.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\themes\grid.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\themes\sand-signika.js" />
+    <Content Include="scripts\Highcharts-4.0.1\js\themes\skies.js" />
     <Content Include="scripts\scripts.js" />
     <Content Include="styles\base.css" />
     <Content Include="styles\default.css" />
@@ -239,7 +275,7 @@
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
-      <UserProperties UseAjaxifiedTemplates="True" UseJQuerySupport="True" />
+      <UserProperties UseJQuerySupport="True" UseAjaxifiedTemplates="True" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
